--- a/locales/en.default.schema.json
+++ b/locales/en.default.schema.json
@@ -343,6 +343,11 @@
             "label": "Collection",
             "info": "Visible when cart drawer is empty."
           }
+        },
+        "cart_upsell_product": {
+          "product": {
+            "label": "Product" 
+          }
         }
       }
     },
